# uncertainty-llm4rec

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TRUCE-Rec_review_and_experiment_plan_bilingual.md  main_aggregate_all.py  main_aggregate_evidence_rerank_grid.py  main_aggregate_rerank_decoupled_comparison.py  main_audit_light_pointwise_signal.py  main_backend_check.py  main_baseline_confidence.py  main_baseline_eval.py  main_baseline_multitask.py  main_baseline_summary.py  main_batch_run.py  main_build_multitask_samples.py  main_build_replay_runtime.py  main_build_samples.py  main_build_srpd_rank_data.py  main_calibrate.py  main_calibrate_evidence_posterior.py  main_calibrate_relevance_evidence.py  main_calibrate_shadow.py  main_compare_baselines.py  main_compare_evidence_robustness.py  main_compare_framework.py  main_compare_framework_baselines.py  main_compare_multitask.py  main_compare_shadow_line.py  main_compare_srpd_frameworks.py  main_compare_teacher_requested_line.py  main_compare_week7_medium_scale.py  main_day10_full_readiness.py  main_day12_llmemb_plugin_smoke.py  main_day13_llmemb_score_export.py  main_day14_simple_backbone_plugin_smoke.py  main_day15_bprmf_backbone_plugin_smoke.py  main_day16_bprmf_coverage_repair.py  main_day17_sasrec_backbone_plugin_smoke.py  (+112 more)
.opencode/: OPENCODE.md
data/: README.md
data_done/: framework_artifact_manifest_server.json  framework_artifact_manifest_server.md  framework_day10_candidate_order_diagnostics.csv  framework_day10_candidate_order_diagnostics_report.md  framework_day10_server_commands.md  (+119 more)
(+1576 files in other folders)
